--- a/3pts_NBA_conference_finals.qmd
+++ b/3pts_NBA_conference_finals.qmd
@@ -272,13 +272,17 @@ fig.update_layout(
     ),
     autosize=True
 )
-fig.show(config={"responsive": True})
+fig.show(config={
+    "responsive": True,
+    "displayModeBar": True,
+    "scrollZoom": True
+})
 ```
 
 ```{python}
 #| fig-align: "center"
-#| fig-width: 16
-#| fig-height: 8
+#| fig-width: 8
+#| fig-height: 5
 #| column: page
 ```
 
