--- a/3pts_NBA_conference_finals.qmd
+++ b/3pts_NBA_conference_finals.qmd
@@ -191,6 +191,12 @@ all_teams = pd.concat([df_prev[['FG3AperGame', 'FG3%']], current_season_stats[['
 avg_3pt_pct = all_teams['FG3%'].mean()
 avg_3pa_per_game = all_teams['FG3AperGame'].mean()
 
+# Multiply y values by 100 for percent display
+df_prev['FG3%'] = df_prev['FG3%'] * 100
+current_season_stats['FG3%'] = current_season_stats['FG3%'] * 100
+all_teams['FG3%'] = all_teams['FG3%'] * 100
+avg_3pt_pct = avg_3pt_pct * 100
+
 # Add horizontal line for average 3PT%
 fig.add_shape(
     type="line",
